2007-11-06  Geoff Norton  <gnorton@novell.com>

	* configure.ac: Determing if glib-2.0 is installed and set HAVE_GLIB appropriately
	* test/Makefile.am: Only build test-glib if glib-2.0 is available

2007-11-05  Geoff Norton  <gnorton@novell.com>

	* configure.ac: Check for getpwent_r and wether libiconv is needed to be linked.
	Also look to see if we can use export-dynamic in the test suite.
	* test/Makefile.am: Get LDFLAGS from configure instead of setting them.
	* src/gerror.c: Implement g_clear_error.
	* src/glib.h: Only use the format, ... convention is HAVE_C99_SUPPORT is available.
	* src/gpath.c: Only use the getpwent_r codepath if getpwent_r is available.
	* src/gspawn.c: Define environ to call _NSGetEnviron() on Apple.
	* src/Makefile.am: Remove -Werror so we dont fail on different function declarations.
		Portions of all of the above are from Andreas Faerber & Jonathan Chambers
	
2007-10-31  Jonathan Chambers <joncham@gmail.com>
	
	* src/ghashtable.c: Add g_hash_table_foreach_steal.
	* src/garray.c: Add g_array_remove_index_fast.
	* src/gpath.c (g_path_is_absolute): Handle windows paths.
	* src/glib.h: Add g_hash_table_foreach_steal and g_array_remove_index_fast
	
	Contribution is licensed as MIT/X11.

2007-06-13  Jonathan Chambers <joncham@gmail.com>
	
	* src/gunicode.c: Add g_unichar_isxdigit and g_unichar_xdigit_value.
	* src/gmisc.c: Add g_win32_getlocale stub.
	* src/glib.h: Add declarations of above functions,
	GFreeFunc typedef, and CLAMP, GUINT_TO_LE, and threading
	macros.
	
	* test/string-util.c: Fix warning.
	* test/utf8.c: Add test for g_unichar_xdigit_value.
	
	Contribution is licensed as MIT/X11.

2007-05-05  Aaron Bockover  <abockover@novell.com>

	* src/gstr.c:
	* src/glib.h: Added g_ascii_tolower implementation; make g_ascii_strdown
	use it to do the transformation

	* test/string-util.c: Added a test for g_ascii_strdown

2007-04-27  Jonathan Chambers <joncham@gmail.com>
	
	* src/gstr.c: Fix off by one error in g_strdup allocation.
