@@ -1,3 +1,8 @@
+2007-11-06  Andreas Faerber  <andreas.faerber@web.de>
+
+	* test/Makefile.am: Fix noinst_PROGRAMS for automake 1.6.3
+	                    Add support for VPATH
+
 2007-11-06  Geoff Norton  <gnorton@novell.com>
 
 	* configure.ac: Determing if glib-2.0 is installed and set HAVE_GLIB appropriately
